--- a/index.html
+++ b/index.html
@@ -1,14 +1,36 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport"
-        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Moyo header</title>
   <link rel="stylesheet" href="./style.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
 </head>
+
 <body>
-  <h1>Moyo header</h1>
+  <div class="container">
+    <header class="header">
+      <div class="logo">
+        <a href="#"><img src="images//logo.png" alt=""></a>
+      </div>
+      <nav class="nav">
+        <ul class="nav__list">
+          <li class="nav__list-item margin"><a href="#" class="nav__list-link is-active">Apple</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">Samsung</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">Смартфоны и телефоны</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link" data-qa="hover">Ноутбуки и компьютеры</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">Гаджеты</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">Планшеты</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">ФОТО</a></li>
+          <li class="nav__list-item"><a href="#" class="nav__list-link">ВИДЕО</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
 </body>
+
 </html>
